[package]
name = "subcase"
description = "Deduplicate unit test code in Rust without fixtures"
version = "0.1.1"
edition = "2021"
rust-version = "1.56.1"
authors = ["Mishmish Dev <mishmish@mishmish.dev>"]
repository = "https://github.com/mishmish-dev/subcase"
license = "MIT"
categories = ["development-tools::testing"]
keywords = ["macros", "section", "subcase", "catch2", "testing"]

[lib]
crate-type = ["lib"]


