[package]
name = "subcase"
description = "Share parts of your test case intuitively"
version = "0.3.0"
edition = "2021"
rust-version = "1.56.1"
authors = ["Mishmish Dev <mishmish@mishmish.dev>"]
repository = "https://github.com/mishmish-dev/subcase"
license = "MIT"
categories = ["development-tools::testing", "development-tools"]
keywords = ["testing", "macros", "section", "subcase", "catch2"]

[lib]
crate-type = ["lib"]